add: footer style

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <section class="section4"></section>
         <section class="section5"></section>
     </main>
-    <footer></footer>
+    <footer> hello i am footer </footer>
 </body>
 </html>
