feat: HTML-Struktur für Section 3 hinzugefügt

--- a/index.html
+++ b/index.html
@@ -34,19 +34,22 @@
 
     <section class="section3">
         <h2>Awesome apps features</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet mass.</p>
         <div class="feature-grid">
             <div class="feature-item">
                 <div class="circle"></div>
-                <p>Fast performance</p>
+                <p>Fast performance
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet </p>
             </div>
             <div class="feature-item">
                 <div class="circle"></div>
-                <p>Fast performance</p>
+                <p>Fast performance
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet </p>
             </div>
             <div class="feature-item">
                 <div class="circle"></div>
-                <p>Fast performance</p>
+                <p>Fast performance
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet </p>
             </div>
         </div>
     </section>
