add h2 to section 4+5

--- a/index.html
+++ b/index.html
@@ -92,8 +92,13 @@
       <section class="section1"></section>
       <section class="section2"></section>
       <section class="section3"></section>
-      <section class="section4"></section>
+      <section class="section4">
+        <h2>Why you should choose our app</h2>
+      </section>
       <section class="section5"></section>
+      <h2>Get awesome features, without extra charges
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet mass.</h2>
     </main>
     <footer>hello i am footer</footer>
   </body>
