--- a/index.html
+++ b/index.html
@@ -93,12 +93,47 @@
       <section class="section2"></section>
       <section class="section3"></section>
       <section class="section4">
-        <h2>Why you should choose our app</h2>
+        <div class="section4-div1">
+          <h2>Why you should choose our app</h2>
+        </div>
+        <div class="section4-div2">
+          <div class="section4-div2-card1 section4-card">
+            <div class="section4-div2-card1-img1"></div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptate placeat aperiam.</p>
+          </div>
+          <div class="section4-div2-card2 section4-card">
+            <div class="section4-div2-card1-img1"></div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptate placeat aperiam.
+              </p>
+            </div>
+          <div class="section4-div2-card3 section4-card">
+            <div class="section4-div2-card1-img1"></div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptate placeat aperiam.
+              </p>
+            </div>
+          </div>
+          <div class="section4-div3">
+          <div class="section4-div3-card1 section4-card">
+            <div class="section4-div3-card1-img1"></div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptate placeat aperiam.</p>
+          </div>
+          <div class="section4-div3-card2 section4-card">
+            <div class="section4-div3-card1-img1"></div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptate placeat aperiam.
+              </p>
+            </div>
+          <div class="section4-div3-card3 section4-card">
+            <div class="section4-div3-card1-img1"></div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptate placeat aperiam.
+              </p>
+            </div>
+          </div>
       </section>
-      <section class="section5"></section>
-      <h2>Get awesome features, without extra charges
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet mass.</h2>
+      <section class="section5">
+        <h2>Get awesome features, without extra charges
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet mass.</h2>
+      </section>
     </main>
     <footer>hello i am footer</footer>
   </body>
