--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="header.css" />
-    <title>Document</title>
+    <title>SE05 First Team Project</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
     <header>
@@ -38,38 +42,61 @@
       <section class="hero">
         <div class="container">
           <!-- Left Content Card -->
-          <div class="hero-card-left">
-            <div class="badge">
-              <p>#1 Editors Choice App of 2020</p>
+          <div
+            class="hero-card-left backdrop-blur-md bg-white/30 shadow-2xl border border-white/20 bg-gradient-to-br from-white/40 to-white/10"
+          >
+            <div class="badge backdrop-blur-sm bg-white/80 shadow-lg">
+              <p
+                class="bg-gradient-to-r from-blue-600 to-cyan-600 bg-clip-text text-transparent"
+              >
+                #1 Editors Choice App of 2020
+              </p>
             </div>
 
             <div class="hero-content">
-              <h1>Some catchy line</h1>
-              <p>
+              <h1
+                class="bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-600 bg-clip-text text-transparent"
+              >
+                Some catchy line
+              </h1>
+              <p class="text-gray-700 font-medium">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit
                 amet mass.
               </p>
             </div>
 
-            <button class="btn">Try for free</button>
+            <button
+              class="btn backdrop-blur-sm bg-gradient-to-r from-indigo-500 to-purple-600 text-white hover:from-indigo-600 hover:to-purple-700 shadow-lg hover:shadow-xl transition-all duration-300 transform hover:scale-105"
+            >
+              Try for free
+            </button>
           </div>
 
           <!-- Right Content Card -->
-          <div class="hero-card-right">
+          <div
+            class="hero-card-right backdrop-blur-md bg-white/30 shadow-2xl border border-white/20 bg-gradient-to-br from-purple-400/30 to-pink-400/30"
+          >
             <div class="demo-content">
-              <h2>Definitely a demo</h2>
-              <p>
+              <h2
+                class="bg-gradient-to-r from-purple-600 to-pink-600 bg-clip-text text-transparent"
+              >
+                Definitely a demo
+              </h2>
+              <p class="text-gray-700 font-medium">
                 WBS Coding School<br />
                 Lorem ipsum dolor sit.
               </p>
             </div>
 
-            <button class="btn">Continue</button>
+            <button
+              class="btn backdrop-blur-sm bg-gradient-to-r from-pink-500 to-rose-600 text-white hover:from-pink-600 hover:to-rose-700 shadow-lg hover:shadow-xl transition-all duration-300 transform hover:scale-105"
+            >
+              Continue
+            </button>
           </div>
         </div>
       </section>
     </header>
-
     <!-- JavaScript for hamburger menu-->
     <script>
       const hamburger = document.getElementById("hamburger");
