--- a/index.html
+++ b/index.html
@@ -131,10 +131,100 @@
       </section>
 
       <section class="section5">
-        <h2>Get awesome features, without extra charges
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet mass.</h2>
-      </section>
-    </main>
-    <footer>hello i am footer</footer>
+          <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Pricing Section</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    * {
+      box-sizing: border-box;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    body {
+      margin: 0;
+      background: #d1d1d1;
+    }
+
+    .pricing-section {
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    .pricing-section h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
+      color: #000;
+    }
+
+    .pricing-section p {
+      font-size: 14px;
+      color: #444;
+      margin-bottom: 40px;
+    }
+
+    .pricing-cards {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      flex-wrap: wrap;
+    }
+
+    .card {
+      background: #fff;
+      width: 220px;
+      padding: 40px 20px;
+      border-radius: 4px;
+      text-align: center;
+    }
+
+    .card.highlight {
+      border: 3px solid #007bff;
+    }
+
+    .price {
+      font-size: 32px;
+      font-weight: bold;
+      margin-bottom: 60px;
+      color: #000;
+    }
+
+    .placeholder {
+      height: 30px;
+      background: #eee;
+      border-radius: 3px;
+    }
+  </style>
+</head>
+
+<body>
+
+  <section class="pricing-section">
+    <h1>Get awesome features, without extra</h1>
+    <h1>chareges</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet massa.</p>
+
+    <div class="pricing-cards">
+      <div class="card">
+        <div class="price">$0</div>
+        <div class="placeholder"></div>
+      </div>
+
+      <div class="card">
+        <div class="price">$40</div>
+        <div class="placeholder"></div>
+      </div>
+
+      <div class="card">
+        <div class="price">$99</div>
+        <div class="placeholder"></div>
+      </div>
+    </div>
+  </section>
+
+
   </body>
 </html>
